improve shortcut filtering